# Batch02-Day9_Multi-Agent_MCP-A2A

./: .env.example  QUICK_REFERENCE.md  README.md  pyproject.toml
common/: llm.py
lab_assignment/: README.md  __init__.py  app.py  supervisor_agents.py
lab_assignment/data/index/: chunks.jsonl
lab_assignment/data/landing/news/: article_01_lo-t-ngh-s-vi-t-ti-u-tan-s-nghi-p-v-ma-t-y-tu-i-tre-online.json  article_02_chuy-n-gia-t-m-l-ngh-s-b-o-d-ng-ma-t-y-s-ng-t-o-l-ang-l-a-d-i-ch-nh-m-nh-tu-i-tr.json  article_03_b-t-ca-s-long-nh-t-v-ca-s-s-n-ng-c-minh-v-li-n-quan-ma-t-y-tu-i-tre-online.json  article_04_ca-s-long-nh-t-khai-s-d-ng-ma-t-y-c-ng-qu-n-l-tu-i-tre-online.json  article_05_v-sao-g-dragon-lee-sun-kyun-v-nhi-u-sao-h-n-nh-m-d-nh-ma-t-y-tu-i-tre-online.json
lab_assignment/data/standardized/legal/: Luật-73-2021-QH14.md  Nghị-định-105-2021-NĐ-CP.md  Nghị-định-28-2026-NĐ-CP.md
lab_assignment/data/standardized/news/: article_01_lo-t-ngh-s-vi-t-ti-u-tan-s-nghi-p-v-ma-t-y-tu-i-tre-online.md  article_04_ca-s-long-nh-t-khai-s-d-ng-ma-t-y-c-ng-qu-n-l-tu-i-tre-online.md  (+3 more)
lab_assignment/evaluation/: eval_pipeline.py  golden_dataset.json  results.md
lab_assignment/src/: task10_generation.py  task2_crawl_news.py  task3_convert_markdown.py  task4_chunking_indexing.py  task5_semantic_search.py  task6_lexical_search.py  task7_reranking.py  task8_pageindex_vectorless.py  task9_retrieval_pipeline.py
stages/stage_1_direct_llm/: main.py
stages/stage_2_rag_tools/: main.py
stages/stage_3_single_agent/: main.py
stages/stage_4_milti_agent/: main.py
tax_agent/: graph.py
